link_libraries(glfw)
link_libraries(freetype)
link_libraries(json_lib)
include_directories(${GLFW_SOURCE_DIR}/include)
include_directories($ENV{PKG_CONFIG_SYSROOT_DIR}/usr/include/freetype2)
#include_directories(/opt/fsl-imx-wayland/4.1.15-2.0.0/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/include/freetype2)
#include_directories(/opt/fsl-imx-wayland/4.1.15-2.0.0/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/include/python2.7)
include_directories(${GLFW_SOURCE_DIR}/boost_1_65_1)
#include_directories(${GLFW_SOURCE_DIR}/freetype)
include_directories(${GLFW_SOURCE_DIR}/imgui/af_include)
include_directories(${GLFW_SOURCE_DIR}/imgui)
include_directories(${GLFW_SOURCE_DIR}/json_lib)
include_directories(${GLFW_SOURCE_DIR}/freetype)
include_directories(gl3w af_control fab  msgpack-c soil)
add_definitions(-DGLFW_INCLUDE_ES3)
add_definitions(-DIMGUI_DISABLE_DEMO_WINDOWS)
add_definitions(-DIMGUI_WAYLAND)
set(IMGUI imgui.cpp imgui_draw.cpp)
file(GLOB AF_CONTROL af_control/*.cpp af_control/*.c)
file(GLOB SOIL soil/*.c)
add_library(imgui_lib ${IMGUI} ${AF_CONTROL} ${SOIL})
set_target_properties(imgui_lib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(imgui_lib wayland-client wayland-server wayland-cursor EGL GLESv2 m pthread dl freetype)
#link_directories(/opt/fsl-imx-wayland/4.1.15-2.0.0/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/lib/qt5/plugins/wayland-graphics-integration-client)

#add_library(imgui_lib ${IMGUI} ${AF_CONTROL} ${SOIL} )
#set_target_properties(imgui_lib PROPERTIES LINKER_LANGUAGE CXX)
#target_link_libraries(imgui_lib wayland-client wayland-server wayland-cursor wayland-egl EGL GLESv2 m pthread dl)
