link_libraries(glfw)
link_libraries(json_lib)
link_libraries(imgui_lib)
link_libraries(message_lib)
include_directories(${GLFW_SOURCE_DIR}/include)
include_directories(${GLFW_SOURCE_DIR}/boost_1_65_1)
include_directories(${GLFW_SOURCE_DIR}/json_lib)
include_directories(${GLFW_SOURCE_DIR}/msg_host)
include_directories($ENV{PKG_CONFIG_SYSROOT_DIR}/usr/include/freetype2)
#include_directories(/opt/fsl-imx-wayland/4.1.15-2.0.0/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/include/freetype2)
#include_directories(/opt/fsl-imx-wayland/4.1.15-2.0.0/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/include/python2.7)
include_directories(${GLFW_SOURCE_DIR}/imgui)
include_directories(${GLFW_SOURCE_DIR}/imgui/af_include)
include_directories(${GLFW_SOURCE_DIR}/imgui/af_control)
include_directories(${GLFW_SOURCE_DIR}/imgui/gl3w ${GLFW_SOURCE_DIR}/imgui/fab ${GLFW_SOURCE_DIR}/imgui/soil)
file(GLOB GP_CPP ./*.cpp)
add_definitions(-DGLFW_INCLUDE_ES3)
add_definitions(-DIMGUI_DISABLE_DEMO_WINDOWS)
add_definitions(-DIMGUI_WAYLAND)
add_executable(graphics_app ${GP_CPP})
set_target_properties(graphics_app PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(graphics_app m pthread python2.7 dl zklz_hud)
#link_directories(/opt/fsl-imx-wayland/4.1.15-2.0.0/sysroots/cortexa9hf-neon-poky-linux-gnueabi/usr/lib/qt5/plugins/wayland-graphics-integration-client)