file(GLOB JSONCPP json/*.cpp)
add_library(json_lib ${JSONCPP})
IF("$ENV{ARCH}" STREQUAL "arm64")
   set(LIBRARY_OUTPUT_PATH ${GLFW_SOURCE_DIR}/../../arhud/ar_hud/RV/afg_sdk/lib)
ELSE()
   #set(LIBRARY_OUTPUT_PATH ${GLFW_SOURCE_DIR}/../../arhud/ar_hud/e115/afg_sdk/lib)
   set(LIBRARY_OUTPUT_PATH ${GLFW_SOURCE_DIR}/../../arhud/ar_hud/e115_test_new/afg_sdk/lib)
ENDIF()
set_target_properties(json_lib PROPERTIES LINKER_LANGUAGE CXX)
