link_libraries(json_lib)
include_directories(${GLFW_SOURCE_DIR}/json_lib)
#include_directories(${GLFW_SOURCE_DIR}/msg_filters_n)
include_directories(${GLFW_SOURCE_DIR}/msg_host)
#file(GLOB msg_filter ${GLFW_SOURCE_DIR}/msg_filters_n/*.cpp)
file(GLOB MSGCPP ./*.cpp)
add_library(message_lib ${MSGCPP} ${msg_filter})
IF("$ENV{ARCH}" STREQUAL "arm64")
   MESSAGE(STATUS "this is imx8 platform")
   set(LIB_OUTPUT_PATH ${GLFW_SOURCE_DIR}/../../arhud/ar_hud/RV/afg_sdk/lib)
   set(LIBRARY_OUTPUT_PATH ${LIB_OUTPUT_PATH})
   ADD_CUSTOM_COMMAND(TARGET message_lib POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy ${LIB_OUTPUT_PATH}/libmessage_lib.a ${GLFW_SOURCE_DIR}/../RV_cluster/afg_sdk/lib)
ELSE()
   MESSAGE(STATUS "this is imx6 platform")
   set(LIBRARY_OUTPUT_PATH ${GLFW_SOURCE_DIR}/../../arhud/ar_hud/e115/afg_sdk/lib)
ENDIF()
set_target_properties(message_lib PROPERTIES LINKER_LANGUAGE CXX)