link_libraries(glfw)
include_directories(${GLFW_SOURCE_DIR}/include)
include_directories(${GLFW_SOURCE_DIR}/imgui/gl3w ${GLFW_SOURCE_DIR}/imgui/soil)
if(_GLFW_SCREEN)
message(STATUS,"it is screen")
if(QNX_VERSION EQUAL 660)
add_definitions(-DGLFW_INCLUDE_ES2)
else()
message(STATUS,"it is qnx700")
add_definitions(-DGLFW_INCLUDE_ES3)
endif()  
endif()
file(GLOB GP_CPP ./*.cpp)
file(GLOB SOIL ${GLFW_SOURCE_DIR}/imgui/soil/*.c)
add_executable(test_texture ${GP_CPP} ${SOIL})
set_target_properties(test_texture PROPERTIES LINKER_LANGUAGE CXX)
if(_GLFW_SCREEN)
target_link_libraries(test_texture EGL GLESv2 m screen)
else()
target_link_libraries(test_texture wayland-client wayland-server wayland-cursor wayland-egl EGL GLESv2 m pthread dl)
endif()
