link_libraries(json_lib)
include_directories(${GLFW_SOURCE_DIR}/json)
include_directories(${GLFW_SOURCE_DIR}/msg_filters_n)
include_directories(${GLFW_SOURCE_DIR}/msg_host)
file(GLOB msg_filter ${GLFW_SOURCE_DIR}/msg_filters_n/*.cpp)
file(GLOB MSGCPP ./*.cpp)
add_library(message_lib ${MSGCPP} ${msg_filter})
set_target_properties(message_lib PROPERTIES LINKER_LANGUAGE CXX)