link_libraries(glfw)
link_libraries(json_lib)
link_libraries(imgui_lib)
include_directories(${GLFW_SOURCE_DIR}/include)
include_directories(${GLFW_SOURCE_DIR}/imgui)
include_directories(${GLFW_SOURCE_DIR}/imgui/af_control)
include_directories(${GLFW_SOURCE_DIR}/imgui/gl3w ${GLFW_SOURCE_DIR}/imgui/fab ${GLFW_SOURCE_DIR}/imgui/soil)
add_definitions(-DGLFW_INCLUDE_ES3)
add_definitions(-DIMGUI_DISABLE_DEMO_WINDOWS)
add_definitions(-DIMGUI_WAYLAND)
add_executable(graphics_app my_application.cpp)
set_target_properties(graphics_app PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(graphics_app wayland-client wayland-server wayland-cursor
 wayland-egl EGL GLESv2 m pthread dl)
